# DagonEngine

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
core/: CMakeLists.txt
core/include/: Event.h  Renderer.h
core/src/: Event.cpp  Renderer.cpp
examples/: CMakeLists.txt
examples/src/: init.cpp  window.cpp
